# fudoshin

./: .gitignore  Cargo.toml  README.md  gameplay_mechanics.md  overview.md
assets/data/: game_config.ron
docs/: combat_phases.md  dev_priorities.md  lessons.md  menu_design.md  mvp_plan.md  phase4.md  roster.md  roster.md.old
docs/todo/: COUNTER_HIT_CANCELS.md  FEEL_FIRST_COMBOS.md  HITBOX_HURTBOX_SIZING.md  HITSTOP_IMPLEMENTATION.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PROGRESS.md  SHORT_COMBO_SYSTEM.md  STUMBLE_JUGGLING_SYSTEM.md
src/: main.rs
src/components/: breath.rs  character.rs  combat.rs  combo.rs  guard.rs  health.rs  hitstop.rs  initiative.rs  mod.rs  movelist.rs  state.rs  stumble.rs
src/data/: game_config.rs  mod.rs
src/events/: combat_events.rs  match_events.rs  mod.rs
src/plugins/: core_game.rs  mod.rs
src/resources/: match_state.rs  mod.rs
src/systems/: attack.rs  breath.rs  chain.rs  collision.rs  damage.rs  evade.rs  game_state.rs  guard.rs  health.rs  hitstop.rs  initiative.rs  input.rs  menus.rs  mod.rs  momentum.rs  movement.rs  pressure.rs  stumble.rs  ui.rs  visual_effects.rs
