[package]
name = "fudoshin"
version = "0.1.0"
edition = "2021"
authors = ["Fudoshin Team"]
description = "The Immovable Mind - A minimalist fighting game"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.25"
bevy_framepace = "0.17"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
